tests/transpiler/x/zig/left_join.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/left_join.zig:16:23: error: unable to infer array size
