tests/transpiler/x/zig/left_join.zig
// Generated by Mochi Zig transpiler on 2025-07-21 10:57 +0000
const std = @import("std");

const Customer = struct {
    id: i64,
    name: []const u8,
};

const Entry = struct {
    order_id: i64,
    customer: Customer,
    total: i64,
};

pub fn main() void {
    const customers: [_]Customer = [_]Customer{.{ .id = 1, .name = "Alice" }, .{ .id = 2, .name = "Bob" }};
    const orders = [_]std.StringHashMap(i64){blk: { var m = std.StringHashMap(i64).init(std.heap.page_allocator); m.put("id", 100) catch unreachable; m.put("customerId", 1) catch unreachable; m.put("total", 250) catch unreachable; break :blk m; }, blk: { var m = std.StringHashMap(i64).init(std.heap.page_allocator); m.put("id", 101) catch unreachable; m.put("customerId", 3) catch unreachable; m.put("total", 80) catch unreachable; break :blk m; }};
    const result: []Entry = blk: {
    var arr = std.ArrayList(Entry).init(std.heap.page_allocator);
    for (orders) |o| {
        for (customers) |c| {
            if (o.customer_id == c.id) {
                arr.append(.{ .order_id = o.id, .customer = c, .total = o.total }) catch unreachable;
            }
        }
    }
    var tmp = arr.toOwnedSlice() catch unreachable;
    break :blk tmp;
};
    try std.io.getStdOut().writer().print("{s}\n", .{"--- Left Join ---"});
    for (result) |entry| {
        try std.io.getStdOut().writer().print("{s} {any} {s} {any} {s} {any}\n", .{"Order", entry.order_id, "customer", entry.customer, "total", entry.total});
    }
}
